# ClawLock

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml
clawlock/: __init__.py  __main__.py  i18n.py  updates.py
clawlock/adapters/: __init__.py
clawlock/hardening/: __init__.py
clawlock/integrations/: __init__.py  promptfoo.py
clawlock/reporters/: __init__.py
clawlock/scanners/: __init__.py  agent_scan.py  mcp_deep.py
clawlock/utils/: __init__.py
rules/: clawlock-semgrep.yaml
skill/: SKILL.md  SKILL_EN.md
tests/: conftest.py  test_clawlock.py
